This file contains the logs between consecutive releases
********************************************************
# Make last version consistent with CMakeLists.txt

Release 1.2.0
=============
- Improvements in the different Gibbs sampler versions + new tutorial
- Function matrix_qoci() becomes MatrixSquareSymmetric::minimizeWithConstraintsInPlace()
- Improvement of test_potential.cpp (include cross-validation)
- Adding a special version to my_throw (i.e. my_throw_impossible)
- Fix AMatrix::isSymmetric (usefull for macos-14)

Release 1.1.0
=============
- MacOS compatibility (Intel and Silicon architectures)
- New dependency: Eigen library for matrices (dense and sparse)
- Fix issue 88, 98, 102, 101, 119, 115, 111
- loadDoc/loadData function convention improvement
- Efficiency improvements (variography, moving neighborhood, kriging systems...)
- Adding new tutorial (with widgets) to describe the calculation of experimental variograms and use of model for Cvv
- Adding description of main classes (Db, Vario and daughter classes, Model and daughter classes).
- Improve the Tutorial on widgets
- Improve the Tutorial on Neighborhood to treat data along profiles
- New extension package (for R only): io.R (interface with 'sf' and 'terra')
- Improving the Tutorial_Model (building a Model by pieces)
- Fix createFromCSV (accept all end-of-line conventions 'CR', 'LF', 'CRLF')
- Fix input/output text file path creation under windows (input data CSV files)
- Improve numerical precision of double values in neutral files (15 digits)
- Function db_model() has been renamed as Model::buildVmapOnDbGrid()
- Function model_stabilize() becomes Model::stabilize()
- Function model_normalize() becomes Model::standardize()
- Function model_get_nonugget_cova() is now included in Model::getCovaNumber(true)
- Function db_vmap_compute() is renamed into db_vmap()
- Function db_variogram_cloud() is renamed as db_vcloud()
- Function variogram_trans_cut() is renamed as Vario::transformCut()